重构流水线服务：异步队列、Milvus v2 API、UUID 修复及状态追踪
后端变更：
- Chunk (数据块)：修复 UUID 生成器注解 (@GeneratedValue(strategy = GenerationType.UUID))。
- ParseService/ChunkService/IndexService (解析/分块/索引服务)：引入 BlockingQueue + ExecutorService 实现异步处理。
- Document (文档)：扩展状态枚举 (UPLOADED/已上传, PARSING/解析中, PARSED/已解析, CHUNKING/分块中, CHUNKED/已分块, INDEXING/索引中, INDEXED/已索引, FAILED/失败)，并新增 deleted (已删除) 字段。
- IndexService (索引服务)：改为从 MinIO 路径读取数据块而非内联读取；追踪每个数据块的成功/失败状态。
- ChunkService (分块服务)：将 chunkCount (分块数量) 和 chunks (数据块内容) 持久化至 MinIO；通过 Kafka 元数据传递文件路径。
- ParseService (解析服务)：增加文档状态追踪 (PARSING/解析中, PARSED/已解析, FAILED/失败)。
- ChatModelService (聊天模型服务)：为 MiniMax API 添加 group-id 请求头支持。
- MilvusVectorStore (Milvus 向量存储)：从 Milvus v1 API 迁移至 v2 API；使用 doc_id 作为主键 (PK)；新增 HNSW 索引支持。
前端变更：
- AdminView/MainView (管理视图/主视图)：统一用户界面，集成文件上传、策略选择及批量上传功能。
- API：新增批量上传接口端点。
基础设施：
- docker-compose：新增 MinIO, Kafka, MySQL, Elasticsearch, Milvus 服务配置。
- application.yml：更新所有服务的配置文件。
- config.yaml.example：更新配置模板。
联合作者： Claude Opus 4.6 noreply@anthropic.com